style: fix mobile width overflow

--- a/app/styles/_page.module.scss
+++ b/app/styles/_page.module.scss
@@ -1,5 +1,5 @@
 .container{
-  width: max(290px,75vw);
+  width: max(250px,75vw);
   margin: 0 auto;
   display: flex;
   justify-content: center;
